web/css/events.css
.wv-eventslist {
  position: relative;
}

.wv-eventslist li.item .event-icon {
  float: left;
  margin: 0 8px 1px 5px;
}

.map-item-list li.item {
  padding: 6px 0;
  width: auto;
  margin: 0;
  display: block;
  overflow: hidden;
  cursor: pointer;
  background: transparent;
}
.map-item-list li.item.hidden {
  display: none;
}

.map-item-list li.item h4 {
  font-size: 0.85em;
  color: #ccc;
  padding: 0 3px;
}

.map-item-list li.item p,
.map-item-list li.item ul {
  padding: 0 3px;
  font-size: 0.78em;
  color: #bbb;
  font-style: italic;
  margin-left: 25px;
  margin-top: 5px;
}

.map-item-list li.item ul {
  list-style: none;
}

.map-item-list li.item-selected,
.map-item-list li.item:hover {
  background: rgba(250, 250, 250, 1);
}

.map-item-list li.item-selected h4,
.map-item-list li.item-selected p,
.map-item-list li.item:hover h4,
.map-item-list li.item:hover p {
  color: #666;
}

.map-item-list li.item input {
  float: right;
}

.map-item-list li.item p {
  color: #666;
}

.map-item-list li.item p a {
  display: block;
  clear: both;
  margin-top: 7px;
  position: relative;
  padding-left: 15px;
}

.wv-eventslist li.item ul li.dates a.active {
  font-weight: 700;
}

.wv-eventslist .map-item-list li.item .fa-external-link {
  margin: 0;
  position: absolute;
  top: 50%;
  margin-top: -5px;
  left: 0;
}

.map-item-list ul.selectorboxcategory {
  outline: none !important;
  float: left;
  overflow: auto;
}

.map-item-list h3.head {
  display: block;
  float: left;
  color: #fff;
  width: 100%;
  border: none;
  text-decoration: none;
  background: none;
  padding: 1px 3px;
  margin: 10px 0 0 2%;
  text-transform: uppercase;
}

.map-item-list a.flowbutton {
  text-decoration: none;
  display: inline-block;
  float: left;
  color: #fff;
  font-size: 1.4em;
  border: none;
  padding: 6px 0;
  margin-top: 20px;
  margin-left: 5px;
}

.map-item-list ul li div {
  padding: 0 !important;
}

.map-item-list li.item h4.mark {
  font-weight: 700;
  color: #f00;
}

.marker {
  display: block;
  height: 26px;
  width: 26px;
  background: url("../images/natural-events/dot.svg");
}

.marker-selected {
  transform: scale(1.4);
  transform-origin: center bottom;
  position: relative;
  z-index: 100;
  height: 31px;
  background: url("../images/natural-events/pin.svg");
}

.marker:not(.marker-selected):hover {
  transform: scale(1.2);
  transform-origin: center bottom;
  position: relative;
  z-index: 100;
  cursor: pointer;
}
.track-marker-case {
  position: relative;
  z-index: 99;
}
.track-marker-case-selected {
  z-index: 100;
}
.track-marker-case-hidden {
  display: none;
}
.track-marker-case-selected .track-marker {
  opacity: 0.7;
  z-index: 100;
}
.track-marker {
  width: 12px;
  height: 12px;
  border: 1px solid #000;
  border-radius: 6px;
  background-color: #fff;
  opacity: 1;
  z-index: 99;
}

.track-marker-date {
  display: none;
  position: absolute;
  width: 95px;
  top: 20px;
  left: -34px;
  padding: 4px;
  background-color: rgba(40, 40, 40, 0.9);
  border-radius: 3px;
  text-align: center;
  font-family: "Roboto Mono", monospace;
  font-size: 12px;
  color: #ccc;
  z-index: 900;
}
.cluster-track-marker-date {
  top: 28px;
  left: -29px;
  width: 110px;
}
.track-marker-date::before {
  position: absolute;
  top: -4px;
  left: 36px;
  content: "";
  border-bottom: 5px solid #000;
  border-bottom: 5px solid rgba(51, 51, 51, 0.9);
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
}

.track-marker-case:not(.track-marker-case-selected) .track-marker:hover {
  transform: scale(1.5);
  border: 1px solid #22a;
  cursor: pointer;
}

.event-track-arrows {
  background-size: initial;
  background-position: center;
  background-repeat: repeat-x;
  background-image: url("../images/natural-events/track-arrow.svg");
  position: absolute;
  pointer-events: none;
}
.track-marker-case .track-marker:hover ~ .track-marker-date {
  display: block;
}
.cluster-marker:hover ~ .cluster-track-marker-date {
  display: block;
}
.cluster-marker-small {
  background-color: rgba(243, 165, 49, 0.6);
  transform: scale(0.8);
}
.cluster-marker-small .cluster-marker-inner {
  background-color: rgba(243, 165, 49, 0.6);
}

.cluster-marker-medium {
  background-color: rgba(249, 106, 23, 0.6);
  transform: scale(0.9);
}
.cluster-marker-medium .cluster-marker-inner {
  background-color: rgba(255, 94, 0, 0.6);
}

.cluster-marker-large {
  background-color: rgba(253, 107, 73, 0.6);
}
.cluster-marker-large .cluster-marker-inner {
  background-color: rgba(247, 53, 10, 0.6);
}
.cluster-marker {
  border-radius: 12px;
  font-family: "Open Sans", sans-serif;
  width: 24px;
  height: 24px;
  z-index: 99;
}
.cluster-marker:hover {
  cursor: pointer;
}
.cluster-marker .cluster-marker-inner {
  position: absolute;
  height: 16px;
  width: 16px;
  text-align: center;
  right: 4px;
  bottom: 4px;
  border-radius: 8px;
  margin-top: 4px;
  font-size: 11px;
}
.event-icon {
  display: block;
  height: 30px;
  width: 30px;
  background: url("../images/natural-events/icon-critical.svg");
}
.wv-map .event-icon {
  height: 26px;
  width: 26px;
}

.event-icon-dust-and-haze {
  background: url("../images/natural-events/icon-dust-and-haze.svg");
}

.event-icon-icebergs {
  background: url("../images/natural-events/icon-icebergs.svg");
}

.event-icon-manmade {
  background: url("../images/natural-events/icon-manmade.svg");
}

.event-icon-sea-and-lake-ice {
  background: url("../images/natural-events/icon-sea-and-lake-ice.svg");
}

.event-icon-severe-storms {
  background: url("../images/natural-events/icon-severe-storms.svg");
}

.event-icon-snow {
  background: url("../images/natural-events/icon-snow.svg");
}

.event-icon-volcanoes {
  background: url("../images/natural-events/icon-volcanoes.svg");
}

.event-icon-water-color {
  background: url("../images/natural-events/icon-water-color.svg");
}

.event-icon-wildfires {
  background: url("../images/natural-events/icon-wildfires.svg");
}

.events-loading-text {
  color: #fff;
  padding: 10px;
}

.wv-alert,
.notify-alert {
  position: relative;
  color: #fff;
  background: #282828;
  border: #282828;
  border-radius: 0;
}

.notify-alert .ui-dialog-content div::after {
  pointer-events: none;
  transform: translateY(50%);
  bottom: 50%;
  height: 10px;
  content: "Read more \002026 ";
  float: right;
  position: absolute;
  display: block;
  z-index: 999;
  right: 45px;
  font-size: 13px;
}

.notify-alert .ui-dialog-content div:hover::after {
  color: #000;
}

@media screen and (max-device-height: 720px) {
  .notify-alert {
    display: none;
  }
}

@media only screen and (max-width: 420px) {
  .wv-alert,
  .notify-alert {
    left: 10px !important;
  }
}

.notify-alert i {
  font-size: 1.4em;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  line-height: 40px;
}

.notify-alert .ui-dialog-content div > i {
  color: #d54e21;
  margin-right: 10px;
  margin-left: 10px;
}

.notify-alert .ui-dialog-content div {
  margin-right: 40px;
}

.notify-alert .ui-dialog-content div:hover {
  background: #ccc;
  cursor: pointer;
}

.notify-alert .ui-dialog-content div:hover span {
  color: #000;
}

.notify-alert .ui-dialog-content > i {
  float: right;
  padding: 0 10px;
}

.notify-alert .ui-dialog-content > i:hover {
  cursor: pointer;
  background: #ccc;
  color: #333;
}

.notify-alert .ui-dialog-content {
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  line-height: 40px;
}

.event-alert-modal-body ul {
  padding-left: 20px;
  margin: 10px 0;
}

.event-alert-modal-body ul li {
  list-style-type: disc;
  display: list-item;
  margin: 2px 0 2px 20px;
}
.events-footer-case {
  color: #fff;
  padding-top: 5px;
  border-top: 0.5px solid rgba(250, 250, 250, 0.5);
}

